ops/yaml/localstack/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: localstack
spec:
  selector:
    matchLabels:
      app: localstack
  replicas: 1
  template:
    metadata:
      labels:
        app: localstack
    spec:
      containers:
      - name: localstack
        image: localstack/localstack:0.12.7
        ports:
        - containerPort: 31000
        - containerPort: 31001
        - containerPort: 32000
